Add RestAPI layer

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -2,9 +2,9 @@ name: .NET
 
 on:
   push:
-    branches: [ main, develop, core ]
+    branches: [ main, develop, core, api ]
   pull_request:
-    branches: [ main, develop, core ]
+    branches: [ main, develop, core, api ]
 
 jobs:
   build:
