--- a/src/API/eHomeDesigner.RestAPI/appsettings.json
+++ b/src/API/eHomeDesigner.RestAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "eHomeDesigner_Db": "Server=(localdb)\\mssqllocaldb;Database=eHomeDesigner_Db;Trusted_Connection=True;"
+  }
 }
