--- a/src/API/eHomeDesigner.RestAPI/eHomeDesigner.RestAPI.csproj
+++ b/src/API/eHomeDesigner.RestAPI/eHomeDesigner.RestAPI.csproj
@@ -5,7 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\eHomeDesigner.Data\eHomeDesigner.Data.csproj" />
   </ItemGroup>
 
 </Project>
