--- a/src/Infrastructure/eHomeDesigner.Data/eHomeDesigner.Data.csproj
+++ b/src/Infrastructure/eHomeDesigner.Data/eHomeDesigner.Data.csproj
@@ -5,12 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+    <ProjectReference Include="..\..\Core\eHomeDesigner.Application\eHomeDesigner.Application.csproj" />
   </ItemGroup>
 
 </Project>
