Add converter implementation

--- a/src/Infrastructure/eHomeDesigner.Converters/eHomeDesigner.Converters.csproj
+++ b/src/Infrastructure/eHomeDesigner.Converters/eHomeDesigner.Converters.csproj
@@ -5,4 +5,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\eHomeDesigner.Application\eHomeDesigner.Application.csproj" />
+  </ItemGroup>
+
 </Project>
