--- a/tests/Infrastructure/eHomeDesigner.Converters.IntegrationTests/eHomeDesigner.Converters.IntegrationTests.csproj
+++ b/tests/Infrastructure/eHomeDesigner.Converters.IntegrationTests/eHomeDesigner.Converters.IntegrationTests.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -18,6 +18,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Core\eHomeDesigner.Application\eHomeDesigner.Application.csproj" />
+    <ProjectReference Include="..\..\..\src\Infrastructure\eHomeDesigner.Converters\eHomeDesigner.Converters.csproj" />
   </ItemGroup>
 
 </Project>
