--- a/src/API/eHomeDesigner.RestAPI/eHomeDesigner.RestAPI.csproj
+++ b/src/API/eHomeDesigner.RestAPI/eHomeDesigner.RestAPI.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -13,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\eHomeDesigner.Converters\eHomeDesigner.Converters.csproj" />
     <ProjectReference Include="..\..\Infrastructure\eHomeDesigner.Data\eHomeDesigner.Data.csproj" />
   </ItemGroup>
 
