--- a/tests/Infrastructure/eHomeDesigner.Data.IntegrationTests/eHomeDesigner.Data.IntegrationTests.csproj
+++ b/tests/Infrastructure/eHomeDesigner.Data.IntegrationTests/eHomeDesigner.Data.IntegrationTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -21,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Infrastructure\eHomeDesigner.Converters\eHomeDesigner.Converters.csproj" />
     <ProjectReference Include="..\..\..\src\Infrastructure\eHomeDesigner.Data\eHomeDesigner.Data.csproj" />
   </ItemGroup>
 
