--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         shell: powershell
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner --version 6.0.x
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner --version 6.0.*
           uses: actions/setup-dotnet@v1
       - name: Build and analyze
         env:
