--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,5 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"KurnakovMaksim_eHomeDesigner.API" /o:"kurnakovmaksim" /d:sonar.login="${{ secrets.SONARCLOUDDD }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet restore
-          dotnet build
+          dotnet build --no-restore
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONARCLOUDDD }}"
