--- a/sonar-cloud.yml
+++ b/sonar-cloud.yml
@@ -47,6 +47,6 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"KurnakovMaksim_eHomeDesigner.API" /o:"kurnakovmaksim" /d:sonar.login="${{ secrets.SONARCLOUDDD }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet restore
-          dotnet build
+          dotnet build --no-restore
           dotnet test --no-build --verbosity normal
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONARCLOUDDD }}"
