--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -1,7 +1,7 @@
 name: SonarCloud
 on:
   push:
-    branches: [ main, develop, core, infrastructure, infrastructure-data, api ]
+    branches: [ main ]
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
